# csv_classifier

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  ruff.toml
data/: categories.json
src/: classification.py  evaluation.py  explanation.py
src/core/: config.py
src/schemas/: analysis_schema.py
src/utils/: data.py
