[project]
name = "cs-text-classifier"
version = "0.1.0"
description = "AI CSV text classifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.68.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "streamlit>=1.43.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
